--- a/Ulux/XAMUmp/XAMUlux.csproj
+++ b/Ulux/XAMUmp/XAMUlux.csproj
@@ -14,6 +14,6 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="XAMControl.XAMIO" Version="2.7.3" />
+    <PackageReference Include="XAMControl.XAMIOBase" Version="1.1.0" />
   </ItemGroup>
 </Project>
